# Slaze

./: .dockerignore  .gitignore  .vercelignore  =2.0  AGENTS.md  BASH_TOOL_DISPLAY_CHANGES.md  COMPLETE_INTERACTIVE_IMPLEMENTATION.md  CONTRACT_SYSTEM_README.md  ChatComplet.txt  Dockerfile  EXIT_FUNCTIONALITY.md  EditTool_Console_Formatting_Summary.md  EditTool_Fix_Summary.md  EditTool_Newline_Fixes_Summary.md  EditTool_Result_Feedback_Analysis.md  FILE_BROWSER_README.md  FILE_BROWSER_SCROLLING_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_MODE.md  LLM_COMMAND_CONVERSION_IMPLEMENTATION.md  LLM_COMMAND_CONVERTER.md  LLM_LOGGING_IMPLEMENTATION_SUMMARY.md  MESSAGE_DISPLAY_FIX.md  MODERN_INTERFACE_FIX.md  MODERN_TASK_SELECTION.md  Makefile  NAVIGATION_FIXES_SUMMARY.md  OPEN_INTERPRETER_TOOL_README.md  PROJECT.md  Procfile  README copy.md  README-VERCEL.md  README.md  Slazy.code-workspace  TOOL_MANAGEMENT_README.md  TROUBLESHOOTING.md  VERCEL_DEPLOYMENT.md  WEB_INTERACTIVE_IMPLEMENTATION.md  WriteCodeTool_Console_Formatting_Summary.md  _analyze_screenshot.ps1  (+76 more)
.profile.d/: uv.sh
api/: index.py  simple.py
assets/: ide.css  ide.js
docs/: BASH_TEST_SUMMARY.md  LLM_ENHANCED_EDIT_TOOL.md  TEST_WRITE_CODE_SUMMARY.md  WINDOWS_COMMAND_CONVERSION_FIX.md  llm_logging_setup.md  web_interface_guide.md
examples/: llm_logging_example.py
fastmcpserver/: testserver.py
fastmcpserver/mcp-client/: client.py
fastmcpserver/screen/: screenshot.py
llm_trainer/: data_loader.py  gui.py  main.py  model.py
prompts/: 3d Sim.md  3dsim.md  BattleShip.md  BlackJackRL.md  HarforCounty.md  Music.md  PhotoEdit.md  WarGame.md  WarRain.md  WarThink.md  abacus.md  acsalestracker.md  airhockey.md  atrain.md  battleship.md  battleship_rl.md  battleshiprl.md  bogame.md  calendar.md  codeassistant.md  deno.md  derivatives.md  diffus.md  docker.md  dots.md  draggableDashboard.md  electron.md  etorus.md  execgame.md  flaskcalendar.md  glbj.md  graphingCalc.md  grokgame.md  harco.md  harco.md.md  heyworld.md  holdtwin.md  kbg_python.md  lego.md  mannybot.md  (+36 more)
pygame_maze/: character.py  config.py  main.py  maze.py
repo/: pyproject.toml  test_ast_editor_target.py  test_cst_target.py  test_cst_target_2.py
repo/3d Sim/: app.js  index.html  style.css
repo/BattleShip/: agents.py  display.py  game.py  main.py  pyproject.toml
repo/BlackJackRL/: README.md  agent.py  config.py  game.py  hello.py  main.py  model.pkl  pyproject.toml  viz.py
repo/Music/: main.py  pyproject.toml
repo/Music/assets/samples/: clap.wav.py  hihat.wav.py  kick.wav.py  readme.txt  snare.wav.py
repo/Music/src/: __init__.py  app.py  audio_engine.py  presets.py  sequencer.py  ui.py
repo/PhotoEdit/: hello.py  image_processor.py  main.py  pyproject.toml
repo/WarGame/: config.py  env.py  game.py  hello.py  main.py  pyproject.toml  renderer.py  trainer.py
repo/WarGame/ai/: __init__.py  agent.py  models.py  utils.py
repo/WarGame/model_checkpoint/: algorithm_state.pkl
repo/WarGame/src/: __init__.py  environment.py  model.py  trainer.py  utils.py  visualizer.py
repo/WarRain/: agent.py  hello.py  main.py  pyproject.toml  training_log.txt  war_env.py
repo/WarThink/: env.py  game.py  rl.py  trainer.py
repo/airhockey/: HelloWorld.md  README.md  README_recorder.md  agent.py  dashboard.py  environment.py  main.py  prof_output.txt  pyproject.toml  recorder.py  stats.prof  train.py  visualizer.py
repo/bogame/: board.py  food.py  game.py  hello.py  main.py  pyproject.toml  snake.py  utils.py
repo/dots/: main.py  pyproject.toml
repo/glbj/: config.py  game.py  hello.py  main.py  pyproject.toml  rl.py  utils.py  viz.py
repo/graphingCalc/: hello.py  main.py  pyproject.toml
repo/grokgame/: hello.py  main.py  pyproject.toml
repo/mannybot/: hello.py  main.py  pyproject.toml
repo/maze/: character.py  main.py  maze.py  pyproject.toml  renderer.py
repo/promptcodemanip/: analyzer.py  hello.py  main.py  pyproject.toml  sample1.py  sample2.py  test_analyzer.py
repo/pyauto/: googlesource.html  hello.py  main.py  pyproject.toml
repo/sol/: config.py  hello.py  main.py  pyproject.toml  test_action_utils.py  test_rl_agent.py  test_state_encoding.py
repo/stategygame/: ai.py  game.py  hello.py  main.py  pyproject.toml  renderer.py
repo/warlearn/: env.py  hello.py  main.py  pyproject.toml  renderer.py  trainer.py
src/: agentconfig.py  agentmessage.py  constants.py  fileoperation.py  toolcall.py  toolresult.py
src/stubs/: slazy_agent.pyi
static/: script.js  style.css
static/js/: file_browser.js
stls/: create_initial_generator.py  hello.py  pyproject.toml  run_agent_training.py  runner.py  test.py
stls/3d_lspo/: __init__.py  environment.py  generate.py  train_agent.py  train_motifs.py
stls/lspo_3d/: environment.py  generate.py  (+2 more)
system_prompt/: code_prompts.py  system_prompt.md
templates/: file_browser.html  index.html  index.js  interactive.html  select_prompt.html  select_prompt_modern.html  state_verticals.html  tool_chat.html  tool_form.html  tool_list.html  tools.html  vscode_view.html  web_ide.html
tests/: test_write_code_tool.py
tools/: AGENTS.md  __init__.py  ast_code_editor.py  base.py  bash.md  bash.py  collection.py  create_picture.py  cst_code_editor.py  docker_edit.py  edit.py  editBU.py  edit_llm.py  envsetup.py  expert.py  file_editor.py  file_manager.py  function_schema.py  get_serp.py  gotourl_reports.py  index.py  interpreter.py  main.py  open_interpreter_tool.py  opens electron.ps1  pinballSRS.md  playwright.py  run.py  verify_ast.py  verify_cst.py  verify_cst_2.py  verify_cst_console.py  windows_navigation.py  write_code.py  write_codeBU.py  write_code_README.md  write_code_tests.py
utils/: Untitled-1.yaml  Untitled-2.py  __init__.py  agent_display_console.py  agent_display_interactive.py  agent_display_web.py  agent_display_web_with_prompt.py  agent_state.py  command_converter.py  context_helpers.py  docker_service.py  file_logger.py  init_llm_db.py  json_utils.py  llm_client.py  llm_logger.py  logger.py  miniOR.py  output_manager.py  web_ui.py  web_ui_interactive.py
web_abacus/: app.py
(+111 files in other folders)
