[tool.mypy]
disable_error_code = "override"
[project]
name = "slazy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.1.0",
    "aiohttp>=3.12.13",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "asttokens==3.0.0",
    "asyncio>=3.4.3",
    "beautifulsoup4==4.13.3",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "bs4==0.0.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "datasets>=4.0.0",
    "distro==1.9.0",
    "executing==2.2.0",
    "farama-notifications==0.0.4",
    "filelock==3.17.0",
    "fire>=0.7.0",
    "flask-socketio==5.5.1",
    "flask==3.1.0",
    "fsspec==2025.2.0",
    "ftfy==6.3.1",
    "greenlet==3.1.1",
    "grpcio==1.70.0",
    "gunicorn==23.0.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "icecream==2.1.4",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "jiter==0.8.2",
    "jupyter>=1.1.1",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "mdurl==0.1.2",
    "mouseinfo==0.1.3",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy",
    "open-interpreter>=0.3.4",
    "openai==1.63.2",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "playwright==1.50.0",
    "portalocker>=3.2.0",
    "protobuf==5.29.3",
    "py-spy>=0.4.0",
    "pycparser==2.22",
    "pydantic-core==2.27.2",
    "pydantic==2.10.6",
    "pyee==12.1.1",
    "pygame>=2.6.1",
    "pygetwindow==0.0.9",
    "pyglet==2.1.2",
    "pygments==2.19.1",
    "pymsgbox==1.0.9",
    "pyparsing==3.2.1",
    "pyperclip==1.9.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "pytest-asyncio>=1.0.0",
    "pytest-html>=4.1.1",
    "pytest>=8.4.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-engineio==4.11.2",
    "python-socketio==5.12.1",
    "pytweening==1.2.0",
    "pytz==2025.1",
    "pyvis>=0.3.2",
    "regex>=2024.11.6",
    "replicate==1.0.4",
    "requests==2.32.3",
    "rich==13.9.4",
    "scalene>=1.5.51",
    "sendgrid>=6.11.0",
    "serpapi==0.1.5",
    "setuptools==75.8.0",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "symbex>=2.0",
    "tenacity==9.0.0",
    "torch>=2.6.0",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "waitress==3.0.2",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
    "yapf>=0.43.0",
    "zope-event==5.0",
    "zope-interface==7.2",
]

[tool.pyright]
typeCheckingMode = "basic"
reportIncompatibleMethodOverride = false
reportGeneralTypeIssues = false
reportAttributeAccessIssue = false
reportArgumentType = false

[tool.uv.workspace]
exclude = ["repo/*"]
