[project]
name = "wargame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pettingzoo>=1.25.0",
    "pygame>=2.6.1",
    "ray[rllib]>=2.52.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
