[project]
name = "promptcodemanip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "pygments>=2.19.2",
    "rapidfuzz>=3.14.3",
]
